funcmap_tests/tests/ui/conflict/drop.stderr
error[E0119]: conflicting implementations of trait `funcmap::FuncMap_cannot_be_derived_for_types_implementing_Drop` for type `Test<_, _>`
 --> tests/ui/conflict/drop.rs:4:8
  |
4 | struct Test<S, T>(S, T);
  |        ^^^^
  |
  = note: conflicting implementation in crate `funcmap`:
          - impl<T> FuncMap_cannot_be_derived_for_types_implementing_Drop for T
            where T: Drop, T: ?Sized;
